--- a/www/package.json
+++ b/www/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 5151"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
