--- a/www/package.json
+++ b/www/package.json
@@ -11,16 +11,13 @@
     "server": "json-server --watch db.json --port 5151"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.2",
-    "zod": "^3.21.4"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
