--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "sass": "^1.62.1",
     "use-context-selector": "^1.4.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
